# Work_3_db

./: .gitignore  main.py  pyproject.toml
data/: database.ini  user_settings.json
result/: all_vacancies.json  avg_salary.json  count_vacancies.json  higher_salary.json  key_word.json
src/: config.py  manager_db.py  parser.py  postrges_db.py  utils.py
