[tool.poetry]
name = "work-3-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
python-dotenv = "^1.1.1"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.17.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '''(\.git)'''

[tool.isort]
line_length = 119
